[package]
name = "ptx-linker"
version = "0.9.1"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"

readme = "README.md"
description = "NVPTX modules linker"
repository = "https://github.com/denzp/rust-ptx-linker"
categories = ["development-tools", "development-tools::build-utils", "external-ffi-bindings"]
keywords = ["llvm", "cuda", "nvptx", "linker"]
edition = "2021"

[badges]
appveyor = { repository = "denzp/rust-ptx-linker", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rust-ptx-linker", branch = "master" }
maintenance = { status = "experimental" }

[features]
default = ["llvm-proxy"]
llvm-proxy = [
    "rustc-llvm-proxy",
    "llvm-sys/no-llvm-linking",
    "llvm-sys/disable-alltargets-init"
]

[dependencies]
anyhow = "1.0"
ar = "0.9"
clap = { version = "3.2", features = ["cargo"] }
either = "1.5"
env_logger = "0.9"
llvm-sys = "150"
log = "0.4"
rustc-llvm-proxy = { version = "0.2", optional = true }
thiserror = "1.0"

[dev-dependencies]
crate-compile-test = "0.2" # TODO: update
failure = "0.1"

[[test]]
name = "linker"
harness = false
