[package]
name = "rust-ptx-linker"
version = "0.9.0"
description = "Linker for embedded code without any system dependencies"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3.0", features = ["std"] }
clap = { version = "4.3", features = ["derive"] }
thiserror = "1.0.24"
